# pdfmark-ai

./: .env.example  .gitignore  LICENSE  README.md  README_ZH.md  pdfmark.toml  pyproject.toml
pdfmark_ai/: __init__.py  chunker.py  cli.py  client.py  config.py  detector.py  extractor.py  image_extractor.py  merger.py  models.py  prompts.py  refiner.py  renderer.py
tests/: test_chunker.py  test_cli.py  test_client.py  test_config.py  test_detector.py  test_e2e.py  test_extractor.py  test_image_extractor.py  test_merger.py  test_models.py  test_prompts.py  test_refiner.py  test_renderer.py
